# Advance_MCP_Server

./: .gitignore  README.md  pyproject.toml
src/research_assistance/: server.py
src/research_assistance/core/: config.py  exceptions.py  logging.py  security.py
src/research_assistance/tools/: list_docs_tool.py  summarize_docs_tool.py
tests/: test_list_docs_tool.py  test_security.py
