[project]
name = "research-assistance-server"
version = "0.1.0"
description = "Research Assistance MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "fastmcp>=3.0.2",
    "mcp>=1.26.0",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
